# baaton

./: .gitignore  AGENTS.md  README.md  baa-ticket-comments.md
.github/workflows/: deploy.yml
agent-skills/: CLAUDE_SNIPPET.md  LICENSE  README.md  package.json
agent-skills/baaton-project-management/: SKILL.md
agent-skills/baaton-project-management/references/: api-reference.md
backend/: .env.example  Cargo.toml  Dockerfile
backend/docs/: SKILL.md  api-reference.md
backend/migrations/: 001_init.sql  002_sprints.sql  003_project_tags.sql  004_issue_category.sql  005_org_upsert.sql  006_github_integration.sql  007_issue_creator_duedate.sql  008_activity_log.sql  009_openclaw_integration.sql  010_milestone_enhancements.sql  011_saved_views.sql  012_templates_estimates.sql  013_project_auto_assign.sql  015_public_submit.sql  016_issue_timestamps.sql  017_api_key_project_scope.sql  018_webhooks.sql  019_project_github_metadata.sql  020_label_colors.sql  021_search_vector.sql  022_snooze.sql  023_activity_log.sql  024_auto_archive.sql  025_issue_relations.sql  026_recurring_issues.sql  027_cycles.sql  028_notifications.sql  029_custom_views.sql  030_sla.sql  031_templates.sql  032_automations.sql  033_pricing.sql  034_initiatives.sql  035_attachments.sql  036_slack.sql  037_agent_config.sql  037_ai_usage.sql  038_superadmin.sql  039_admin_audit_log.sql  040_user_plans.sql  (+13 more)
backend/src/: filter.rs  main.rs  novu.rs
backend/src/github/: client.rs  issue_linker.rs  jobs.rs  mod.rs  status_mapper.rs  webhook_processor.rs
backend/src/middleware/: mod.rs  plan_guard.rs  rate_limit.rs  security.rs
backend/src/models/: github.rs  mod.rs
backend/src/routes/: activity.rs  admin.rs  agent_config.rs  agent_sessions.rs  ai.rs  ai_agent.rs  api_keys.rs  approvals.rs  attachments.rs  automations.rs  comments.rs  custom_fields.rs  cycles.rs  dashboard.rs  docs.rs  email_intake.rs  event_bus.rs  gamification.rs  health.rs  import_export.rs  initiatives.rs  invites.rs  issues.rs  metrics.rs  milestones.rs  mod.rs  notifications.rs  orgs.rs  project_context.rs  project_templates.rs  projects.rs  recurring.rs  relations.rs  sla.rs  slack.rs  sprints.rs  sse.rs  tags.rs  templates.rs  tldrs.rs  (+3 more)
backend/src/routes/ai_chat/: convert.rs  mod.rs  stream.rs  types.rs
backend/src/routes/ai_tools/: mod.rs
backend/src/routes/github/: mod.rs  oauth.rs  repos.rs  webhooks.rs
backend/tests/: smoke.sh
docs/: AGENTS.md  AGENT_SKILLS_PLAN.md  AI_BACKEND_MIGRATION.md  AI_TOOLS_DESIGN.md  API.md  ARCHITECTURE.md  FEATURE_MATRIX.md  GITHUB_INTEGRATION.md  MILESTONE_BEST_PRACTICES.md  PRD.md  README.md  SETUP.md  STRATEGY.md  TAURI_APP_PLAN.md  audit-mission-control-vs-baaton.md  competitive-audit-2026-03.md
frontend/: .dockerignore  .env.example  .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/public/: llms-full.txt  llms.txt  manifest.json  robots.txt  sw.js
frontend/src/: App.tsx  main.tsx
frontend/src/__tests__/: triage.test.ts
frontend/src/components/: ErrorBoundary.tsx  ThemeProvider.tsx
frontend/src/contexts/: MemberResolutionContext.tsx
frontend/src/hooks/: useAgentChat.ts  useApi.ts  useClerkMembers.ts  useCrossOrgMembers.ts  useFileUpload.ts  useIssueMutations.ts  useKeyboardShortcuts.ts  useOnboarding.ts  useOrgGuard.ts  useOrgMembers.ts  useSSE.ts  useSelection.ts  useVersionCheck.ts
frontend/src/lib/: ai-continue.ts  ai-engine.ts  ai-executor.ts  ai-skills.ts  ai-state.ts  ai-thinking.tsx  api.ts  (+7 more)
scripts/: import-airtable.py  import-linear.py  resync-airtable.mjs  resync-airtable.py
(+159 files in other folders)
